--- a/inst/quarto/gb-slides.html
+++ b/inst/quarto/gb-slides.html
@@ -100,7 +100,7 @@
     code span.vs { color: #20794d; } /* VerbatimString */
     code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </style>
-  <link rel="stylesheet" href="gb-slides_files/libs/revealjs/dist/theme/quarto-6c1337093a3bcb9ab178c4fdea1459fe.css">
+  <link rel="stylesheet" href="gb-slides_files/libs/revealjs/dist/theme/quarto-793e7231bd7fffdc0c2f7ae1fb85859f.css">
   <link rel="stylesheet" href="_extensions/ucl/fonts.css">
   <link href="gb-slides_files/libs/revealjs/plugin/quarto-line-highlight/line-highlight.css" rel="stylesheet">
   <link href="gb-slides_files/libs/revealjs/plugin/reveal-menu/menu.css" rel="stylesheet">
@@ -262,7 +262,7 @@
   <link href="gb-slides_files/libs/quarto-ojs/quarto-ojs.css" rel="stylesheet">
   <link href="gb-slides_files/libs/htmltools-fill-0.5.9/fill.css" rel="stylesheet">
   <script src="gb-slides_files/libs/htmlwidgets-1.6.4/htmlwidgets.js"></script>
-  <script src="gb-slides_files/libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
+  <script src="gb-slides_files/libs/jquery-3.6.1/jquery-3.6.1.min.js"></script>
   <link href="gb-slides_files/libs/leaflet-1.3.1/leaflet.css" rel="stylesheet">
   <script src="gb-slides_files/libs/leaflet-1.3.1/leaflet.js"></script>
   <link href="gb-slides_files/libs/leafletfix-1.0.0/leafletfix.css" rel="stylesheet">
@@ -271,7 +271,7 @@
   <link href="gb-slides_files/libs/rstudio_leaflet-1.3.1/rstudio_leaflet.css" rel="stylesheet">
   <script src="gb-slides_files/libs/leaflet-binding-2.2.3/leaflet.js"></script>
   <script type="ojs-define">
-  {"contents":[{"name":"actors","value":{"x":[1.3077,0.3746,0.2562,0.0689,0.9949,1.3555,-0.8115,-0.3472,0.0225,0.7923,-0.317,-1.2729,0.2078,-0.3281,0.4614,0.4832,1.656,-0.7109,1.2539,0.2362,0.696,1.3364,-0.8267,-1.6415,1.1247,-0.8776,-1.4386,0.2443,0.4971,2.1502,1.9842,0.0019,-0.2594,-2.0413,0.5282,0.7223,-0.1065,-0.2093,2.082,-0.943,-0.8093,-1.6978,0.342,-0.1591,-0.4215,-2.5581,1.8156,0.7271,0.8353,0.2742,-0.0592,0.0496,0.6558,-0.1272,-0.0789,-0.3642,0.3854,-0.2396,-2.6816,-1.1733,0.2418,0.3483,-0.0473,-0.9961,-0.7167,-1.3265,-0.5461,-1.7121,0.0327,0.5933,-0.5043,-0.4794,-0.2552,0.2285,0.543,0.8102,-0.9859,-0.5512,-0.1403,0.1786,1.5953,0.062,-0.3883,1.252,-0.4913,0.4266,-0.1664,-1.9713,0.4698,0.2028,-0.0465,-0.7423,-1.4358,-1.0995,1.0038,-0.1424,-1.0721,-0.3358,1.1176,-2.1608],"y":[-0.0309,0.1185,0.2537,-3.1074,-0.1028,-0.3512,0.1413,0.2851,1.0216,-1.0387,-0.7674,-0.5716,-1.9159,0.0511,0.0623,1.4396,-0.8803,1.6067,0.7751,-0.585,1.0445,-0.2114,-0.418,-1.4721,-1.6037,0.4197,1.7147,0.6367,-0.0489,-0.2886,-0.809,-0.6175,1.7113,-0.341,0.1219,-0.0068,-1.7915,0.6746,-1.8298,-0.5597,0.4926,0.1304,0.817,-0.4377,-0.8354,0.5325,-0.4364,1.3685,0.0401,-1.6259,-0.8581,1.8745,1.6202,1.7758,-0.1439,-0.0361,-0.0882,-0.7973,-1.4096,-2.2796,-0.4544,-1.9847,-0.0807,-0.7835,0.1754,0.6104,-0.3787,-1.9746,0.4607,-0.7312,0.4731,0.4858,0.3167,-0.9105,0.6761,-1.6201,0.875,0.7234,-0.0858,-0.0484,0.6451,1.9413,2.2343,1.2134,0.1786,0.8971,-0.3171,-0.7294,-1.5188,0.6011,0.9698,0.1595,-0.9958,-0.9973,0.4448,-0.4632,0.4902,-1.3175,0.4111,3.3053]}}]}
+  {"contents":[{"name":"actors","value":{"x":[0.0265,-0.8373,0.3911,0.9063,-0.7172,0.294,-0.3171,-0.6585,0.7424,-1.0116,-0.6938,-1.5125,-0.806,-0.9918,1.1013,-1.2652,-0.4897,-0.4423,2.9721,0.355,0.1152,-0.4464,0.4861,0.4175,-1.3646,0.7362,0.3195,-0.1902,1.0908,-1.0828,0.1499,-1.1576,0.102,-0.1565,-0.0485,0.1504,0.6137,-0.0424,0.0647,2.727,-1.1393,1.1823,0.3376,-0.6607,-0.3632,-1.322,0.6035,1.0486,-2.284,1.1903,-0.9135,-0.4614,-0.5458,-1.3889,-1.152,0.1884,-0.6121,-0.9361,-1.2595,-1.1554,0.0292,0.1943,0.4253,1.0427,-0.2065,0.2714,0.8246,0.5453,-1.7807,-0.3627,-0.0316,-0.3568,-0.1085,-0.7275,-0.2492,0.839,-2.4208,-0.5635,0.2038,0.3011,-0.4866,1.0298,-0.9793,1.5872,-0.7999,1.7044,-0.9098,0.5787,0.6201,-0.4365,0.7952,-1.6593,-0.5948,0.4511,0.0125,0.0294,-0.7006,-0.7064,-1.2167,-0.2919],"y":[0.3621,0.9325,-0.0705,0.0397,1.9364,-0.4713,-0.9748,-0.5468,0.3602,1.0695,0.39,-1.4449,-0.8734,0.4913,0.1342,-0.8427,-0.3557,0.2768,-0.0404,-0.1693,-0.4956,0.4491,-0.4349,0.2034,1.7303,-0.5293,0.4422,-0.0739,-0.5274,0.3108,-0.1365,-0.982,1.9086,0.4597,-1.1493,0.8893,-1.4411,-1.0009,-0.2232,0.2951,0.9828,-1.2792,1.4165,-1.1047,0.1647,1.1612,0.1548,-1.6803,-0.0753,-1.2382,-0.3088,0.3155,0.1861,0.7721,-0.6591,-0.1421,-1.0622,0.6269,-1.1035,0.086,0.3227,-0.3796,0.2301,0.7397,-0.9427,-1.0771,-2.0381,-0.3281,1.3766,0.5576,0.5965,0.0574,-0.6321,0.1987,-1.4229,0.0688,-0.059,-0.9176,-0.1085,0.8933,0.6245,0.872,-1.0198,0.5936,1.007,-1.961,-0.9451,1.8315,0.9471,0.0333,-0.0902,1.5679,-0.8421,0.1964,-1.334,0.3942,-0.5107,-0.7029,-1.7317,-0.1093]}}]}
   </script>
 </head>
 <body class="quarto-light">
@@ -1844,8 +1844,8 @@ a_{21}&amp; =b_{21}&amp;
 <p>Include Jupyter widgets and htmlwidgets in your presentations</p>
 <div class="cell" data-layout-align="center">
 <div class="cell-output-display">
-<div class="leaflet html-widget html-fill-item" id="htmlwidget-8d26610be2dd0962104a" style="width:55%;height:480px;"></div>
-<script type="application/json" data-for="htmlwidget-8d26610be2dd0962104a">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org/copyright/\">OpenStreetMap<\/a>,  <a href=\"https://opendatacommons.org/licenses/odbl/\">ODbL<\/a>"}]},{"method":"addMarkers","args":[-36.852,174.768,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"The birthplace of R",null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[-36.852,-36.852],"lng":[174.768,174.768]}},"evals":[],"jsHooks":[]}</script>
+<div class="leaflet html-widget html-fill-item" id="htmlwidget-b4db82e1f2b84f9d921b" style="width:55%;height:480px;"></div>
+<script type="application/json" data-for="htmlwidget-b4db82e1f2b84f9d921b">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org/copyright/\">OpenStreetMap<\/a>,  <a href=\"https://opendatacommons.org/licenses/odbl/\">ODbL<\/a>"}]},{"method":"addMarkers","args":[-36.852,174.768,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"The birthplace of R",null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[-36.852,-36.852],"lng":[174.768,174.768]}},"evals":[],"jsHooks":[]}</script>
 </div>
 </div>
 <div class="footer">
@@ -2024,11 +2024,12 @@ a_{21}&amp; =b_{21}&amp;
 -->
 <!-- this adds an empty slide with the "Thank you" gif selected in the yml of the talk -->
 </section></section>
-<section id="section" class="title-slide slide level1 center" data-background-image="images/reese.gif" data-background="#002248">
+<section id="section" class="title-slide slide level1 thank-you center" data-background-image="images/reese.gif" data-background="#002248" data-footer="false">
 <h1></h1>
-<div class="footer" style="background-color: transparent!important; background: transparent!important">
-
-</div>
+<!--
+::: {.footer style="background-color: transparent!important; background: transparent!important"}
+:::
+-->
 
 </section>
     </div>
