--- a/ttt.html
+++ b/ttt.html
@@ -100,9 +100,8 @@
     code span.vs { color: #20794d; } /* VerbatimString */
     code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </style>
-  <link rel="stylesheet" href="gb-slides_files/libs/revealjs/dist/theme/quarto-2fa3f4c20aabde3c8dd72d5539630a63.css">
+  <link rel="stylesheet" href="gb-slides_files/libs/revealjs/dist/theme/quarto-793e7231bd7fffdc0c2f7ae1fb85859f.css">
   <link rel="stylesheet" href="_extensions/ucl/fonts.css">
-  <link rel="stylesheet" href="./assets/common.css">
   <link href="gb-slides_files/libs/revealjs/plugin/quarto-line-highlight/line-highlight.css" rel="stylesheet">
   <link href="gb-slides_files/libs/revealjs/plugin/reveal-menu/menu.css" rel="stylesheet">
   <link href="gb-slides_files/libs/revealjs/plugin/reveal-menu/quarto-menu.css" rel="stylesheet">
@@ -272,7 +271,7 @@
   <link href="gb-slides_files/libs/rstudio_leaflet-1.3.1/rstudio_leaflet.css" rel="stylesheet">
   <script src="gb-slides_files/libs/leaflet-binding-2.2.3/leaflet.js"></script>
   <script type="ojs-define">
-  {"contents":[{"name":"actors","value":{"x":[1.0185,0.5728,-0.2511,-0.5936,-1.5766,-0.3252,-1.8891,-0.1947,-0.2239,-2.3927,-0.5899,-2.9563,-0.526,1.614,-0.5034,1.1516,-0.3321,-0.323,0.8773,-0.1442,-0.2173,-0.2052,-0.7097,1.0824,-0.6514,1.2253,-0.5177,-0.7822,-1.0052,0.6983,-0.2107,-1.1895,-0.0241,1.9185,1.031,0.1648,0.3439,0.0946,1.394,0.1603,-0.4879,0.995,0.2129,-0.4912,1.5854,1.2112,-1.4691,-0.6903,-1.2987,1.521,1.2874,0.3045,2.2589,0.0435,0.0191,-1.4408,1.0616,-1.073,-0.2163,0.5821,-1.1364,-0.1632,0.7595,1.2332,-0.833,1.793,-0.8651,1.0877,0.4928,1.344,1.1354,-0.2551,-1.7939,-1.5053,-0.8538,0.9733,1.189,0.2384,-0.3094,0.5379,-1.3904,0.437,-2.1385,-0.2425,-1.4104,0.9961,1.1328,1.1195,0.8118,-0.5974,1.3044,-1.31,-0.236,-1.0915,-1.3579,0.7615,-1.1592,0.5657,-0.7753,0.1865],"y":[1.5844,-1.8985,-0.6101,-1.0031,-1.1148,1.3817,-1.8915,1.4339,-0.578,-0.4263,-1.2243,-1.234,-1.4806,0.5455,1.6813,-0.6191,0.2459,-1.6771,-0.9075,0.879,-1.4552,-0.703,0.2138,1.8167,-1.7891,-0.2309,-0.1461,-0.6661,1.0542,-0.63,-0.7922,-0.0432,-0.1691,-0.6518,0.1199,0.2167,-1.8994,-1.178,0.4395,0.6721,1.1367,-1.4186,0.4254,0.4887,-2.4626,-0.4246,-1.4145,0.6164,0.7707,-0.7324,-0.5701,-0.4972,0.1225,-0.1471,-0.0971,1.5238,0.2211,-0.594,0.1433,-0.1375,1.4503,0.5796,-1.0202,-0.336,2.0741,-1.0127,0.6,0.4555,2.1383,-1.4718,0.8299,-0.2265,-0.8528,3.165,-0.7658,-0.4901,0.2877,-0.0683,-0.2373,-1.4844,-0.2653,1.7677,-0.1031,1.4632,0.6491,-1.1005,0.8454,0.7517,-0.9853,-0.8829,1.5198,-0.7841,-1.9829,0.4801,-0.3215,0.0573,-0.2754,-0.2019,-0.8138,-0.6281]}}]}
+  {"contents":[{"name":"actors","value":{"x":[-0.1044,-0.8074,-0.0974,-0.8057,0.4276,0.6323,-0.7078,0.5485,0.36,-0.4573,-0.585,-0.2595,-0.5928,1.1477,-0.305,-0.1965,-0.9185,0.7612,-0.7498,0.7957,0.8695,-1.8338,1.8548,-0.2821,0.5052,2.6127,0.1847,1.1954,-0.1896,1.0909,-0.7372,-0.3524,-1.0116,-2.0411,-1.5087,-0.9122,0.1512,0.8357,-1.0823,0.2117,0.8411,0.761,0.9181,-0.8036,0.5676,0.8211,0.5047,0.081,0.5682,-0.3753,-2.577,-1.4994,-0.6309,0.7722,-1.22,0.1211,-0.0222,-0.917,0.2506,0.4004,-1.2261,0.9049,-0.419,0.1543,0.2736,-0.7021,1.587,-1.0043,1.4346,-1.3968,1.2675,0.973,-0.76,-0.2555,-0.3795,-0.7779,0.9097,1.3371,-0.6014,-0.4378,-0.309,0.8421,0.3864,0.5652,-0.6208,-0.5066,0.5852,-1.0458,0.5337,0.93,0.5694,-2.11,0.2698,0.7288,-1.1972,0.377,-0.6076,0.9997,-0.1666,0.6418],"y":[-0.8284,1.0175,-0.6742,-0.2061,0.2139,0.2237,1.1047,0.1333,-0.3438,-1.5163,-1.3388,-0.2572,1.8048,-0.4642,0.9408,-0.6431,0.1686,0.1654,0.0872,0.057,0.1981,-0.394,0.4855,-2.3155,-0.4069,-0.2188,-2.3516,-1.3916,0.159,-0.1985,0.3734,-1.6202,1.551,1.6928,1.5625,1.5852,2.236,-0.263,-0.9897,-0.0247,-0.561,-1.5742,0.1562,-0.7718,1.605,1.0136,-0.5588,-0.9199,-0.0388,0.1805,1.061,-0.5529,1.3118,1.4132,-0.3674,0.9307,0.2034,0.1457,-0.7144,0.5355,2.2452,-0.3562,0.2485,-0.6775,0.0193,-0.3447,-0.8688,1.4766,0.0955,-0.3651,-0.6754,-1.4009,2.3874,-2.1475,0.9086,1.6418,-1.7121,0.3431,-0.0792,-0.2762,-1.0143,-0.3485,-0.0119,1.0748,1.3129,-1.9374,0.0179,1.6625,0.7559,-1.324,-0.666,-0.3271,0.0841,0.681,1.0125,0.1497,-0.5955,0.947,-1.3448,-1.1328]}}]}
   </script>
 </head>
 <body class="quarto-light">
@@ -294,6 +293,7 @@
 
 <p style="margin:0px 15px 0px 15px;" class="mail-websites"><span style="color: #6364FF; height: 0.8em"><i class="fa-brands fa-mastodon" aria-label="mastodon"></i></span> <a href="https://mas.to/@gianlubaio">@gianlubaio@mas.to</a> &nbsp; &nbsp;<span style="color: #0A66C2; height: 0.8em"><i class="fa-brands fa-linkedin" aria-label="linkedin"></i></span> <a href="https://www.linkedin.com/in/gianluca-baio/">gianluca-baio</a> &nbsp; &nbsp;</p>
 
+<p style="margin:0px;" class="mail-websites"><span style="color: white; height: 0.8em"><i class="fa-brands fa-orcid" aria-label="orcid"></i></span> <a href="https://orcid.org/0000-0003-4314-2570">https://orcid.org/0000-0003-4314-2570</a></p>
 
 <br>
 
@@ -1857,8 +1857,8 @@ a_{21}&amp; =b_{21}&amp;
 <p>Include Jupyter widgets and htmlwidgets in your presentations</p>
 <div class="cell" data-layout-align="center">
 <div class="cell-output-display">
-<div class="leaflet html-widget html-fill-item" id="htmlwidget-846d740b9efec141b475" style="width:55%;height:480px;"></div>
-<script type="application/json" data-for="htmlwidget-846d740b9efec141b475">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org/copyright/\">OpenStreetMap<\/a>,  <a href=\"https://opendatacommons.org/licenses/odbl/\">ODbL<\/a>"}]},{"method":"addMarkers","args":[-36.852,174.768,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"The birthplace of R",null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[-36.852,-36.852],"lng":[174.768,174.768]}},"evals":[],"jsHooks":[]}</script>
+<div class="leaflet html-widget html-fill-item" id="htmlwidget-5cf2b06e115bcf706109" style="width:55%;height:480px;"></div>
+<script type="application/json" data-for="htmlwidget-5cf2b06e115bcf706109">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org/copyright/\">OpenStreetMap<\/a>,  <a href=\"https://opendatacommons.org/licenses/odbl/\">ODbL<\/a>"}]},{"method":"addMarkers","args":[-36.852,174.768,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"The birthplace of R",null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[-36.852,-36.852],"lng":[174.768,174.768]}},"evals":[],"jsHooks":[]}</script>
 </div>
 </div>
 <div class="footer">
