--- a/inst/quarto/_extensions/ucl/title-slide.html
+++ b/inst/quarto/_extensions/ucl/title-slide.html
@@ -1,4 +1,5 @@
-<section id="$idprefix$title-slide"$for(title-slide-attributes/pairs)$ $it.key$="$it.value$"$endfor$>
+<!-- Here, add 'data-footer="false"' to remove the footer from the title page -->
+<section id="$idprefix$title-slide"$for(title-slide-attributes/pairs)$ $it.key$="$it.value$"$endfor$  data-footer="false">
   <h1 class="title">$title$</h1>
 
 $if(subtitle)$
@@ -38,7 +39,7 @@ $endif$
 
 <br>
 
-<p style="margin-top:20px;" class="date-conference">$date-as-string$</p>
+<p style="margin-top:3vw!important;" class="date-conference">$date-as-string$</p>
 
 $if(conference.session)$
 <p style="margin:0px;" class="date-conference">$conference.session$</p>
@@ -53,10 +54,6 @@ $endif$
 
 <br>
 
-$for(institute)$
-<p style="margin-top: 6vh;" class="date-conference">$institute.uni$</p>
-$endfor$
-
 
 $if(postit.random-talks)$
 <p><span class="postit1">Check out our departmental podcast “Random Talks” on Soundcloud! <a href="https://soundcloud.com/uclsound/sets/sample-space" style="color: #ff7700;" title="Listen to our podcast"><i class="fa-brands fa-soundcloud" aria-label="soundcloud"></i></a></span></p>
@@ -66,7 +63,14 @@ $if(postit.social-media)$
 <p><span class="postit2">Follow our departmental social media accounts <a href="url=%22https://twitter.com/stats_ucl" style="color: #000000;" title="Follow us on X"><i class="fa-brands fa-x-twitter" aria-label="x-twitter"></i></a> <a href="https://www.linkedin.com/in/statistical-science-ucl-906b9a201" style="color: #0A66C2;" title="Follow us on LinkedIn"><i class="fa-brands fa-linkedin" aria-label="linkedin"></i></a> <a href="https://www.instagram.com/ucl.stats/" style="color: #8a3ab9;" title="Follow us on Instagram"><i class="fa-brands fa-instagram" aria-label="instagram"></i></a> + magazine <a href="https://sample-space.org/" style="color: #434252;" title="Read our online magazine">“Sample Space”</a></span></p>
 $endif$
 
-<p style="margin-top: 2vh;"><span class="logo-stats"></span></p>
+<!--  style="margin-top: 2vh;" -->
+<p><span class="logo-stats"></span></p>
+
+<!-- Add this spacer div to send the institute at the bottom of the page -->
+<div style="flex-grow: 1;"></div>
+
+$for(institute)$
+<p class="institute">$institute.uni$</p>
+$endfor$
 
 </section>
-
